# budget_bot_2

./: .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  env_template  pyproject.toml  settings.py
alembic/: env.py
alembic/versions/: 1531b1b8c3ea_add_records_categories_user_models.py  373179b930e1_delete_created_on_posotive_constrain.py  cdc7ccd1d11c_first_revision.py
css/: report.css
jinja_templates/: basic_template.html  categories_report.html  days_report.html  ungrouped_report.html
src/: fill_in_categories.py  main.py  settings.py
src/budget_bot_2/: callbacks.py  custom_exeptions.py  db_connection.py  handlers.py  models.py  report.py  repositories.py  utilities.py
tests/: conftest.py  factories.py  test_repositories.py  test_utilities.py  testing_db_connection.py
