[tool.poetry]
name = "budget-bot-2"
version = "0.1.0"
description = ""
authors = ["Pavel Maksimov <maksimov.pavel.an@yandex.ru>"]
readme = "README.md"
packages = [{include = "budget_bot_2", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.13"}
alembic = "^1.11.0"
asyncpg = "^0.27.0"
pydantic = "^1.10.7"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
